test(ci): Enable tests and jacoco coverage